--- a/main.yml
+++ b/main.yml
@@ -2,6 +2,7 @@
 - name: Install Docker and Zabbix agent
   hosts: agent
   become: true
+  gather_facts: False
 
   tasks:
     - name: Update apt cache
